[gd_scene load_steps=6 format=3 uid="uid://dm08ug13g54tn"]

[ext_resource type="Script" uid="uid://dec8hadisf4cm" path="res://ui/login_page/login_page.gd" id="1_qfmr5"]
[ext_resource type="Texture2D" uid="uid://den7yq6jk7svu" path="res://assets/logo.png" id="2_1lji1"]
[ext_resource type="Texture2D" uid="uid://dn8np0h2ugsoe" path="res://assets/textures/3D World Image.jpg" id="3_1lji1"]

[sub_resource type="SystemFont" id="SystemFont_06t4h"]

[sub_resource type="SystemFont" id="SystemFont_rhts7"]

[node name="LoginPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qfmr5")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 8.0
offset_right = 16.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="Node" parent="CenterContainer"]

[node name="UsernameField" type="LineEdit" parent="CenterContainer/VBoxContainer"]
offset_left = 680.0
offset_top = 664.0
offset_right = 1112.0
offset_bottom = 738.0
theme_override_font_sizes/font_size = 50
placeholder_text = "Enter Username"

[node name="StartGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
offset_left = 736.0
offset_top = 808.0
offset_right = 1064.0
offset_bottom = 885.0
theme_override_fonts/font = SubResource("SystemFont_06t4h")
theme_override_font_sizes/font_size = 50
disabled = true
text = "Start Game"

[node name="Node" type="Node" parent="CenterContainer"]

[node name="GameNameLabel" type="Label" parent="CenterContainer/Node"]
offset_left = 528.0
offset_top = 392.0
offset_right = 1264.0
offset_bottom = 568.0
theme_override_fonts/font = SubResource("SystemFont_rhts7")
theme_override_font_sizes/font_size = 120
text = "Dungeon101"

[node name="Logo" type="TextureRect" parent="CenterContainer/Node"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -164.0
offset_top = 64.0
offset_right = 156.0
offset_bottom = 368.0
grow_horizontal = 2
texture = ExtResource("2_1lji1")

[node name="Background image" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 1800.0
offset_bottom = 1080.0
texture = ExtResource("3_1lji1")

[connection signal="text_changed" from="CenterContainer/VBoxContainer/UsernameField" to="." method="_on_username_field_text_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
